[project]
name = "aoc-2025"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "covdefaults>=2.3.0",
    "coverage>=7.12.0",
    "ipdb>=0.13.13",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
python_files="**/*.py"

[tool.coverage.run]
plugins = ["covdefaults"]
