[project]
name = "aoc-2025"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "covdefaults>=2.3.0",
    "coverage>=7.12.0",
    "ipdb>=0.13.13",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
python_files="**/*.py"

[tool.coverage.run]
plugins = ["covdefaults"]
